<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".activitys.GradeSalaActivity">

    <!-- A Toolbar exibirá o nome da sala -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_grade_horaria"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"/>

    <!-- O contêiner da grade -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grade_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_grade_horaria">

        <!-- Cabeçalhos dos dias da semana -->
        <TextView android:id="@+id/headerSegunda" style="@style/HeaderDiaSemana" android:text="@string/segunda"/>
        <TextView android:id="@+id/headerTerca" style="@style/HeaderDiaSemana" android:text="@string/terca"/>
        <TextView android:id="@+id/headerQuarta" style="@style/HeaderDiaSemana" android:text="@string/quarta"/>
        <TextView android:id="@+id/headerQuinta" style="@style/HeaderDiaSemana" android:text="@string/quinta"/>
        <TextView android:id="@+id/headerSexta" style="@style/HeaderDiaSemana" android:text="@string/sexta"/>

        <!-- Flow para alinhar os cabeçalhos -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_headers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="headerSegunda,headerTerca,headerQuarta,headerQuinta,headerSexta"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- O RecyclerView que exibirá a ocupação da sala -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGradeHoraria"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_headers"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>