<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".activitys.HomeActivity">

    <!-- <<< TOOLBAR ADICIONADA AQUI >>> -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_home"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"/>

    <!-- Os botões agora ficam dentro de um LinearLayout para facilitar o alinhamento -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center|top"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_home">

        <com.example.educa1.CustomButtonView
            android:id="@+id/btnDirecao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:buttonText="@string/direcao"
            app:showDeleteIcon="false"
            app:showEditIcon="false" />

        <com.example.educa1.CustomButtonView
            android:id="@+id/btnProfessores"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:buttonText="@string/professores"
            app:showDeleteIcon="false"
            app:showEditIcon="false" />

        <com.example.educa1.CustomButtonView
            android:id="@+id/btnAlunos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:buttonText="@string/alunos"
            app:showDeleteIcon="false"
            app:showEditIcon="false" />

        <com.example.educa1.CustomButtonView
            android:id="@+id/btnJuegos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:buttonText="@string/juegos"
            app:showDeleteIcon="false"
            app:showEditIcon="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>