<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".activitys.GradeHorariaActivity">

    <!-- 1. Toolbar adicionada no topo -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_grade_horaria"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white"
        app:navigationIconTint="@color/white"/>

    <!-- 2. Contêiner da grade, agora posicionado abaixo da Toolbar -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/grade_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_grade_horaria"
        tools:visibility="visible">

        <!-- 3. Elementos internos da grade, exatamente como estavam antes -->
        <!-- Cabeçalhos dos dias da semana -->
        <TextView android:id="@+id/headerSegunda" style="@style/HeaderDiaSemana" android:text="@string/segunda"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
        <TextView android:id="@+id/headerTerca" style="@style/HeaderDiaSemana" android:text="@string/terca"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@id/headerSegunda"/>
        <TextView android:id="@+id/headerQuarta" style="@style/HeaderDiaSemana" android:text="@string/quarta"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@id/headerTerca"/>
        <TextView android:id="@+id/headerQuinta" style="@style/HeaderDiaSemana" android:text="@string/quinta"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@id/headerQuarta"/>
        <TextView android:id="@+id/headerSexta" style="@style/HeaderDiaSemana" android:text="@string/sexta"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toEndOf="@id/headerQuinta"/>

        <!-- Flow para alinhar os cabeçalhos -->
        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow_headers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="headerSegunda,headerTerca,headerQuarta,headerQuinta,headerSexta"
            app:flow_wrapMode="chain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- RecyclerView principal da grade -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvGradeHoraria"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/rvProgresso"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flow_headers"/>

        <!-- 4. RecyclerView do progresso, agora DENTRO do contêiner -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProgresso"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:listitem="@layout/item_progresso_disciplina"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>